<resources>
    <string name="app_name">LabExam03</string>
    <string name="onboarding_text1">Welcome to the Productivity App</string>
    <string name="onboarding_text2">Manage your tasks efficiently</string>
    <string name="onboarding_text3">Start organizing your day!</string>
    <string name="next_button">Next</string>
    <string name="start_button">Get Started</string>
    <string name="onboarding_image_desc">Onboarding Image</string>
    <string name="main_interface_image">main_interface_image</string>
    <string name="image_description">tasklist_image</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="task_list">Task List</string>
    <string name="timer">Timer</string>
    <string name="view_reminders">View Reminders</string>
    <string name="time_spent_in_this_session_0_0_0">Time spent in this session: 0:0:0</string>
    <string name="you_have_spent_0_hours_0_minutes_in_the_app">You have spent 0 hours 0 minutes in the app.</string>
    <string name="welcome_to_taskminder">Welcome to TaskMinder</string>
    <string name="manage_your_tasks_efficiently">Manage your tasks efficiently</string>
    <string name="taskminder">TaskMinder</string>
    <string name="stay_on_top_of_your_tasks_with_timely_reminders">Stay on top of your tasks with timely reminders</string>
    <string name="taskminderag">TaskMinder</string>
    <string name="welcome">Welcome!</string>
    <string name="start_organizing_your_day">Start organizing your day!</string>
    <string name="taskminderagain">TaskMinder</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="track">:</string>
    <string name="track2">:</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="track_your_activities">Track your activities</string>
    <string name="_00">00</string>
    <string name="_001">00</string>
    <string name="_002">00</string>
    <string name="reminder_description">Reminder Description</string>
    <string name="enter_task_description2">Enter task description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="home">home</string>
    <string name="tips">tips</string>
    <string name="profile">profile</string>
    <string name="_1_add_tasks_for_your_daily_activities">1. Add tasks for your daily activities</string>
    <string name="_2_set_short_term_and_long_term_reminders">2. Set short-term and long-term reminders</string>
    <string name="_3_use_sound_or_vibration_alerts_for_important_reminders">3. Use sound or vibration alerts for important reminders.</string>
    <string name="_4_use_the_timer_for_timed_activities">4. Use the timer for timed activities.</string>
    <string name="_5_mark_completed_reminders_to_stay_organized">5. Mark completed reminders to stay organized.</string>
    <string name="taskminder_tips">TaskMinder Tips</string>
    <string name="user_profile">User Profile</string>
    <string name="alex_mason">Alex Mason</string>
    <string name="age_25">Age: 25</string>
    <string name="_7834671875">+7834671875</string>
    <string name="location_new_orleans_la">Location: New Orleans, LA</string>
    <string name="view_reminders1">View Reminders</string>
    <string name="search_reminders1">Search Reminders</string>
</resources>
