<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornsilk">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Heading -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile"
                android:fontFamily="@font/alatsi_regular"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_image_background"
                android:padding="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/profilepic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alex_mason"
                    android:fontFamily="@font/alatsi_regular"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_25"
                    android:fontFamily="@font/alatsi_regular"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="alexmason@yahoo.com"
                    android:fontFamily="@font/alatsi_regular"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7834671875"
                    android:fontFamily="@font/alatsi_regular"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_new_orleans_la"
                    android:fontFamily="@font/alatsi_regular"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/dark_olive_green"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="VisualLintBottomNav" />

</FrameLayout>
